@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 1995, 1996, 1997  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1998--2013  The R Core Team
+ *  Copyright (C) 1998--2018  The R Core Team
+ *  Copyright (C) 1995--1997  Robert Gentleman and Ross Ihaka
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -188,10 +188,19 @@ SEXP mvfft(SEXP z, SEXP inverse)
     return z;
 }
 
-static Rboolean ok_n(int n, int *f, int nf)
+static Rboolean ok_n(int n, const int f[], int nf)
 {
-    int i;
-    for (i = 0; i < nf; i++) {
+    for (int i = 0; i < nf; i++) {
+	while(n % f[i] == 0) {
+	    if ((n = n / f[i]) == 1)
+		return TRUE;
+	}
+    }
+    return n == 1;
+}
+static Rboolean ok_n_64(uint64_t n, const int f[], int nf)
+{
+    for (int i = 0; i < nf; i++) {
 	while(n % f[i] == 0) {
 	    if ((n = n / f[i]) == 1)
 		return TRUE;
@@ -200,40 +209,85 @@ static Rboolean ok_n(int n, int *f, int nf)
     return n == 1;
 }
 
-static int nextn0(int n, int *f, int nf)
+static int nextn0(int n, const int f[], int nf)
 {
-    while(!ok_n(n, f, nf))
+    while(!ok_n(n, f, nf) && n < INT_MAX)
 	n++;
-    return n;
+    if(n >= INT_MAX) { // or give an error?  previously was much more problematic
+	warning(_("nextn() found no solution < %d = INT_MAX (the maximal integer);"
+		  " pass '0+ n' instead of 'n'"), // i.e. pass "double" type
+		INT_MAX);
+	return NA_INTEGER;
+    } else
+	return n;
+}
+static uint64_t nextn0_64(uint64_t n, const int f[], int nf)
+{
+    while(!ok_n_64(n, f, nf) && n < UINT64_MAX)
+	n++;
+    if(n >= UINT64_MAX) { // or give an error?  previously was much more problematic
+	warning(_("nextn<64>() found no solution < %ld = UINT64_MAX (the maximal integer)"),
+		UINT64_MAX);
+	return 0; // no NA for this type
+    } else  // FIXME: R has no 64 int --> The caller may *not* be able to coerce to REALSXP
+	return n;
 }
 
 
-SEXP nextn(SEXP n, SEXP factors)
+SEXP nextn(SEXP n, SEXP f)
 {
-    SEXP f, ans;
-    int i, nn, nf;
-
-    PROTECT(n = coerceVector(n, INTSXP));
-    PROTECT(f = coerceVector(factors, INTSXP));
-    nn = LENGTH(n);
-    nf = LENGTH(f);
-
+    if(TYPEOF(n) == NILSXP) // NULL <==> integer(0) :
+	return allocVector(INTSXP, 0);
+    int nprot = 0;
+    if(TYPEOF(f) != INTSXP) { PROTECT(f = coerceVector(f, INTSXP)); nprot++; }
+    int nf = LENGTH(f), *f_ = INTEGER(f);
     /* check the factors */
-
     if (nf == 0) error(_("no factors"));
-    for (i = 0; i < nf; i++)
-	if (INTEGER(f)[i] == NA_INTEGER || INTEGER(f)[i] <= 1)
+    if (nf <  0) error(_("too many factors")); // < 0 : from integer overflow
+    for (int i = 0; i < nf; i++)
+	if (f_[i] == NA_INTEGER || f_[i] <= 1)
 	    error(_("invalid factors"));
 
-    ans = allocVector(INTSXP, nn);
-    for (i = 0; i < nn; i++) {
-	if (INTEGER(n)[i] == NA_INTEGER)
-	    INTEGER(ans)[i] = NA_INTEGER;
-	else if (INTEGER(n)[i] <= 1)
-	    INTEGER(ans)[i] = 1;
-	else
-	    INTEGER(ans)[i] = nextn0(INTEGER(n)[i], INTEGER(f), nf);
+    Rboolean use_int = TYPEOF(n) == INTSXP;
+    if(!use_int && TYPEOF(n) != REALSXP)
+	error(_("'n' must have typeof(.) \"integer\" or \"double\""));
+    R_xlen_t nn = XLENGTH(n);
+    if(!use_int && nn) {
+	double *d_n = REAL(n), n_max = -1; // := max_i n[i]
+	for (R_xlen_t i = 0; i < nn; i++) {
+	    if (!ISNAN(d_n[i]) && d_n[i] > n_max) n_max = d_n[i];
+	}
+	if(n_max <= INT_MAX / f_[0]) { // maximal n[] should not be too large to find "next n"
+	    use_int = TRUE;
+	    n = PROTECT(n = coerceVector(n, INTSXP)); nprot++;
+	}
     }
-    UNPROTECT(2);
+    SEXP ans = PROTECT(allocVector(use_int ? INTSXP : REALSXP, nn)); nprot++;
+    if(nn == 0) return(ans);
+    if(use_int) {
+	int *n_ = INTEGER(n),
+	    *r  = INTEGER(ans);
+	for (R_xlen_t i = 0; i < nn; i++) {
+	    if (n_[i] == NA_INTEGER)
+		r[i] = NA_INTEGER;
+	    else if (n_[i] <= 1)
+		r[i] = 1;
+	    else
+		r[i] = nextn0(n_[i], f_, nf);
+	}
+    } else { // use "double" (as R has no int64 ..)
+	double
+	    *n_ = REAL(n),
+	    *r  = REAL(ans);
+	for (R_xlen_t i = 0; i < nn; i++) {
+	    if (ISNAN(n_[i]))
+		r[i] = NA_REAL;
+	    else if (n_[i] <= 1)
+		r[i] = 1;
+	    else
+		r[i] = (double) nextn0_64((uint64_t)n_[i], f_, nf);
+	}
+    }
+    UNPROTECT(nprot);
     return ans;
 }
